# omni3bot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_Madgwick_Integration.md  README_by_GPT.md  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  README_CPP.md  README_MODULAR.md  ble_manager.cpp  ble_manager.hpp  display_manager.cpp  display_manager.hpp  idf_component.yml  imu.c  main.c  main.cpp  main.hpp  motion_manager.cpp  motion_manager.hpp  pwm.c  radio_manager.cpp  radio_manager.hpp  remote.c  rgb.c  robot_controller.hpp  robot_status.cpp  robot_status.hpp  sensor_manager.cpp  sensor_manager.hpp  system_monitor.cpp  system_monitor.hpp
